--- a/app/deployment.yaml
+++ b/app/deployment.yaml
@@ -16,7 +16,13 @@ spec:
     spec:
       containers:
       - image: rasonego/app-node:1.0
-        name: app-node
+        name: app-node 
+        livenessProbe:
+          httpGet:
+            path: /health
+            port: 80
+          initialDelaySeconds: 3 
+          periodSeconds: 3
 ---
 apiVersion: v1
 kind: Service
